Sun, 18 Mar 2007 16:42:32 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Bugfix - only play a podcast episode when it 
          has been downloaded and the download filename exists
        * data/gpodder.glade: Add Shift+Return accelerator to the "Play selected
          episode" menu item and add a separator to the menu

Sun, 18 Mar 2007 15:04:03 +0100 <thp@perli.net>
        * bin/gpodder: Use "/usr/bin/env python" instead of "/usr/bin/python" 
          to fix problems with FreeBSD's default Python location of 
          "/usr/local/bin/python" (thanks to Alain Tauch for pointing that out)

Sat, 17 Mar 2007 13:57:50 +0100 <thp@perli.net>
        * data/gpodder.desktop: Clean-up the desktop entry file
        * Makefile: Make PREFIX a variable defaulting to /usr and pass it 
          to setup.py's install method and to the "make uninstall" target

Sat, 17 Mar 2007 13:30:37 +0100 <thp@perli.net>
        * data/gpodder.glade: Update preferences dialog and main window's 
          "About" menu item to be (more) compliant to the GNOME HIG 
          specification 2.0
        * src/gpodder/gpodder.py: Code changes for GUI update

Sat, 17 Mar 2007 13:07:06 +0100 <thp@perli.net>
        * src/gpodder/libtagupdate.py: add tagging_supported() to report if 
          we can support tagging (dependent on python-eyed3 installed or not)
        * src/gpodder/libplayers.py: use gtk.STOCK_EXECUTE instead of string
        * src/gpodder/libpodcasts.py: Fix log messages; only call tag update 
          functions when tagging_supported() returns a true value
        * src/gpodder/librssreader.py: Remove parseXML logging output (not
          needed anymore, seems stable enough)
        * src/gpodder/gpodder.py: clean local db cache when adding download 
          items with addDownloadedItem(); disable update tags checkbox in 
          preferences dialog when taggint_supported() returns a false value
        * bin/gpodder: version + release date bump