@@ -37,8 +37,8 @@ help:
 	@echo 'make test            run gpodder in local directory'
 	@echo 'make cl              make new changelog entry (1)'
 	@echo 'make release         create source tarball in "dist/"'
-	@echo 'make install         install gpodder into "/usr/"'
-	@echo 'make uninstall       uninstall gpodder from "/usr/"'
+	@echo 'make install         install gpodder into "$(PREFIX)"'
+	@echo 'make uninstall       uninstall gpodder from "$(PREFIX)"'
 	@echo 'make generators      generate manpage, run tepache and resize logo'
 	@echo 'make messages        rebuild messages.pot from new source'
 	@echo 'make clean           remove generated+temp+*.pyc files'
